force-app/main/default/objects/cgcloud__Listing_Classification__c/cgcloud__Listing_Classification__c.object-meta.xml
<CustomObject>
    <description>This object holds information about listing modules and product category for a customer.</description>
    <label>Listing Classification</label>
    <nameField>
        <displayFormat>LC-{00000000}</displayFormat>
        <label>Listing Classification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Listing Classifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>