force-app/main/default/objects/cgcloud__Listing_Classification__c/fields/cgcloud__Account__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Account__c</fullName>
    <description>Reference to the account the listing classification is assigned to.</description>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Listing Classifications</relationshipLabel>
    <relationshipName>Listing_Classifications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>