force-app/main/default/objects/cgcloud__Listing_Classification__c/fields/cgcloud__Listing_Module__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Listing_Module__c</fullName>
    <description>Reference to the listing module</description>
    <label>Listing Module</label>
    <length>80</length>
    <type>Text</type>
</CustomField>