force-app/main/default/objects/cgcloud__Listing_Classification__c/fields/cgcloud__Product_Category__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product_Category__c</fullName>
    <description>Product category which the product belongs to.</description>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Beverages</fullName>
            </value>
            <value>
                <fullName>Snacks</fullName>
            </value>
            <value>
                <fullName>Detergent</fullName>
            </value>
            <value>
                <fullName>Hygiene</fullName>
            </value>
            <value>
                <fullName>Chips</fullName>
            </value>
            <value>
                <fullName>Frozen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>